--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "concurrently": "^8.2.0"
-  }
+  },
+  "description": "",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
